--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "0.60.4"
+    "react-native": "0.60.4",
+    "react-native-swiper": "^1.6.0-nightly.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
